--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,5 @@
-<html>
-    <body>
+<%-include("header")%>
        Welcome <%=name%>
         <a href="/users/logout">Logout</a>
         <a href="/users/profile">Profile</a>
-    </body>
-</html>
+        <%-include("footer")%>
