--- a/views/header.ejs
+++ b/views/header.ejs
@@ -113,6 +113,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/login">Login</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/products">Products</a>
+      </li>
     
     </ul>
  
